# grease

./: .gitignore  Cargo.toml  Dockerfile  GOALS.md  README.md  build.rs  build_and_upload.sh  fly.toml  mensgleeclub.sql  mysql  schema_backup.rs  setup-db-and-user.sh  sqlx-data.json  up_backup.sql
.cargo/: config
.github/workflows/: deploy.yml
admin_tools/: Cargo.toml  cargo
admin_tools/src/: main.rs
extract_derive/: Cargo.toml
extract_derive/src/: lib.rs
grease/: .env  Cargo.toml
grease/src/: auth.rs  cron.rs  db.rs  db_conn.rs  email.rs  file.rs  main.rs  util.rs
grease/src/db/: mod.rs  schema.rs
grease/src/db/models/: absence_request.rs  event.rs  grades.rs  member.rs  minutes.rs  misc.rs  mod.rs  semester.rs  song.rs
grease/src/graphql/: .query.rs.kak.YZeUJd  input.rs  mod.rs  mutation.rs  permission.rs  query.rs  static_data.rs
grease/src/graphql/models/: minutes.rs  misc.rs  mod.rs  money.rs  song.rs
grease/src/graphql/models/event/: mod.rs  public.rs  uniform.rs
grease/src/graphql/models/member/: active_semester.rs
grease/src/graphql/models/permissions/: constants.rs  permissions.rs
grease/src/models/: document.rs  minutes.rs  misc.rs  mod.rs  money.rs  permissions.rs  semester.rs  song.rs  static_data.rs  variable.rs
grease/src/models/event/: absence_request.rs  attendance.rs  carpool.rs  event.rs  gig.rs  mod.rs  public.rs  uniform.rs
grease/src/models/grades/: context.rs  mod.rs  week.rs
grease/src/models/member/: active_semester.rs  member.rs  mod.rs  session.rs
grease/src/models/member/grades/: grades.rs  mod.rs  week.rs
grease/src/routes/: event_routes.rs  member_routes.rs  officer_routes.rs  repertoire_routes.rs  router.rs
grease_derive/: Cargo.toml
grease_derive/src/: lib.rs
migration_script/: Cargo.toml
migration_script/src/: main.rs  migrate.rs  new_schema.rs
migrations/: 20220414012506_create_db.sql  20220414012511_use_timestamps.sql
migrations/2018-08-22-214705_create_tables/: down.sql  up.sql
mysql_dump/: Cargo.toml
mysql_dump/src/: main.rs
scripts/: build_and_upload.sh  run-cgi.sh  setup-db-and-user.sh  setup-db.sh  update-sqlx.sh  upload.sh
src/: auth.rs  cron.rs  db.rs  email.rs  error.rs  extract.rs  file.rs  lib.rs  main.rs  util.rs
src/db/: connection.rs  mod.rs  schema.rs  traits.rs
src/db/models/: absence_request.rs  attendance.rs  carpool.rs  event.rs  file.rs  grades.rs  link.rs  meeting.rs  member.rs  minutes.rs  misc.rs  mod.rs  semester.rs  song.rs  testing.rs  transaction.rs  var.rs
src/email/: event.rs  mod.rs  reset_password.rs
src/graphql/: guards.rs  input.rs  mod.rs  mutation.rs  permission.rs  query.rs
src/graphql/models/: minutes.rs  song.rs
src/graphql/models/event/: attendance.rs  carpool.rs  event.rs
src/graphql/models/member/: member.rs  mod.rs  session.rs
src/graphql/models/member/grades/: grades.rs
src/graphql/models/permissions/: mod.rs
src/models/: document.rs  link.rs  minutes.rs  mod.rs  money.rs  permissions.rs  semester.rs  song.rs  static_data.rs  variable.rs
src/models/event/: absence_request.rs  attendance.rs  carpool.rs  gig.rs  mod.rs  public.rs  uniform.rs
src/models/grades/: context.rs  mod.rs  week.rs
src/models/member/: .active_semester.rs.kak.aPxRuh  active_semester.rs  mod.rs  session.rs
src/routes/: event.rs  event_routes.rs  events.rs  from_url.rs  macros.rs  member.rs  member_routes.rs  misc.rs  misc_routes.rs  mod.rs  officer_routes.rs  officers.rs  officers_routes.rs  repertoire_routes.rs  router.rs
src/tests/: mock.rs
templates/: event-in-48-hours.html  new-event.html  reset-password.html
tests/: router.rs  test_conn.rs
tools/admin_tools/: Cargo.toml
tools/admin_tools/src/: main.rs
tools/migration_script/: Cargo.toml
tools/migration_script/src/: error.rs  main.rs  migrate.rs  new_schema.rs  old_schema.rs
tools/mysql_dump/: Cargo.toml
tools/mysql_dump/src/: main.rs
