[package]
name = "grease"
version = "0.1.0"
authors = ["Sam Mohr <sam.mohr@protonmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.5", features = ["headers"] }
async-graphql-axum = "4"
# TODO: use the dataloader?
async-graphql = "4"
async-trait = "0.1"
base64 = "0.10"
bcrypt = "0.12"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "mysql",
  "time",
  "offline",
] }
thiserror = "1"
time = { version = "0.2", features = ["serde"] }
tokio = { version = "1", features = ["macros"] }
uuid = { version = "0.8", features = ["v4"] }
