[package]
name = "grease"
version = "0.1.0"
authors = ["Sam Mohr <sam.mohr@protonmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
async-graphql = { version = "2", features = ["chrono", "dataloader"] }
async-trait = "0.1"
base64 = "0.10"
bcrypt = "0.4"
cgi = "0.2"
dotenv = "0.14"
owning_ref = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sqlx = { version = "0.4", features = ["runtime-tokio-rustls", "mysql", "chrono", "offline"] }
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known", "local-offset"] }
uuid = { version = "0.7", features = ["v4"] }
