[package]
name = "grease"
version = "0.1.0"
authors = ["Sam Mohr <sam.mohr@protonmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
async-graphql = { version = "3", features = ["dataloader"] }
async-trait = "0.1"
base64 = "0.10"
bcrypt = "0.12"
cgi = "0.6"
dotenv = "0.15"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "mysql", "time", "offline"] }
# TODO: figure out which features we want
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known", "local-offset"] }
uuid = { version = "0.8", features = ["v4"] }
