[package]
name = "migration_script"
version = "0.1.0"
authors = ["Sam Mohr <sammohr97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "16.0"
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.2"
